fix a lot of bugs and create genereate-wrap-box

--- a/public/components/aside/aside.css
+++ b/public/components/aside/aside.css
@@ -5,7 +5,7 @@
     left: 40px;
     width: 100px;
     height: 89vh;
-    border-radius: 8px;
+    border-radius: 30px;
     background: var(--sidebar-gradient);
     box-shadow: 0 0 5px var(--dark-black);
     z-index: 9999;
