--- a/public/components/custom/custom.css
+++ b/public/components/custom/custom.css
@@ -5,6 +5,7 @@
     --dark-black : #0C0910;
     --matte-black : #171717 ;
     --minimal-dark : #1C1C23 ;
+    --one-c-dark : #1C1C27 ;
 
     --dark-blue : #3F3FCB ;
     --minimal-blue : #5151CD ;
